ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dz2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dz2
                port:
                  number: 8000
